<resources>
    <string name="app_name">calculator_new</string>

    <string name="btn_dot">.</string>

    <string name="btn_0">0</string>
    <string name="btn_eq">=</string>
    <string name="btn_plus">+</string>
    <string name="btn_min">-</string>
    <string name="btn_mul">*</string>
    <string name="btn_div">/</string>
    <string name="btn_per">%</string>
    <string name="btn_br">()</string>
    <string name="btn_c">C</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="text_res">5768</string>
    <string name="text_cal">5000+300+468</string>

    <string name="top_bar_name">Calculator</string>



</resources>