<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">
    <include layout="@layout/tool_bar"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_res"
                android:textSize="60sp"
                android:textStyle="bold"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
           >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cal"
                android:textSize="40sp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
              />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_c"
                android:textColor="@color/red"
                android:elevation="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_small_bracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_br"
                android:textColor="@color/yellow_bg"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_per"
                android:textColor="@color/yellow_bg"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_div"
                android:textColor="@color/yellow_bg"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_7"

                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"

                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_8"

                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_9"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_mul"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/yellow_bg"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                app:cornerRadius="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_4"

                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_5"

                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_6"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:minHeight="80dp"
                android:text="@string/btn_min"
                android:textColor="@color/yellow_bg"
                android:textSize="25sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_1"

                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_2"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:text="@string/btn_3"

                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cornerRadius="10dp"
                android:minHeight="80dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_plus"
                android:textColor="@color/yellow_bg"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                app:cornerRadius="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/btn_dot"
                app:elevation="5dp"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"

                android:minHeight="80dp"
                app:cornerRadius="10dp"
                android:text="@string/btn_0"
                android:textSize="25sp" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:minHeight="80dp"
                android:layout_marginStart="5dp"
                android:text="@string/btn_eq"
                android:textColor="@color/white"
                android:backgroundTint="@color/yellow_bg"
                android:textSize="25sp"
                app:cornerRadius="10dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>